# problems

./: Cargo.toml
src/ioi2020/mushrooms/: mushrooms.rs
src/ioi2020/mushrooms/grader/: manager
src/ioi2020/mushrooms/tests/: 1-01.in  1-02.in  1-03.in  1-04.in  1-05.in  1-06.in  1-07.in  1-08.in  1-09.in  1-10.in  1-11.in  1-12.in  1-13.in  1-14.in  1-15.in  1-16.in  1-17.in  1-18.in  1-19.in  1-20.in  1-21.in  1-22.in  1-23.in  1-24.in  1-25.in  1-26.in  1-27.in  1-28.in  1-29.in  1-30.in  1-31.in  1-32.in  1-33.in  1-34.in  1-35.in  1-36.in  1-37.in  1-38.in  1-39.in  1-40.in  (+47 more)
src/ioi2021/candies/: candies.rs
src/ioi2021/candies/tests/: 0-01.in  0-01.out  1-01.in  1-01.out  1-02.in  1-02.out  1-03.in  1-03.out  1-04.in  1-04.out  1-05.in  1-05.out  2-01.out  2-02.in  2-02.out  2-03.in  2-03.out  3-01.in  3-01.out  3-02.in  3-02.out  3-03.in  3-03.out  3-04.out  3-05.out  3-06.out  3-07.out  4-01.in  4-01.out  4-02.in  4-02.out  4-03.in  4-03.out  4-04.in  4-04.out  4-05.in  4-05.out  4-06.out  4-07.out  4-08.in  (+11 more)
src/ioi2021/dungeons/: dungeons.rs
src/ioi2021/dungeons/tests/: 0-01.in  0-01.out  1-01.in  1-01.out  1-02.in  1-02.out  1-03.in  1-03.out  1-04.in  1-04.out  1-05.in  1-05.out  1-06.in  1-06.out  2-01.in  2-01.out  2-02.out  2-03.out  2-04.out  2-05.out  2-06.out  2-07.out  3-01.in  3-01.out  3-02.in  3-02.out  3-03.in  3-03.out  3-04.in  3-04.out  3-05.in  3-05.out  3-06.in  3-06.out  3-07.in  3-07.out  3-08.in  3-08.out  3-09.in  3-09.out  (+71 more)
src/ioi2022/fish/: fish.rs
src/ioi2022/insects/: insects.rs
src/misc/: euclid.rs  misc.rs
