[package]
name = "problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ioi2021-dungeons"
path = "src/ioi2021/dungeons/dungeons.rs"

[[bin]]
name = "ioi2022-fish"
path = "src/ioi2022/fish/fish.rs"

[[bin]]
name = "ioi2022-insects"
path = "src/ioi2022/insects/insects.rs"

[[bin]]
name = "misc"
path = "src/misc/misc.rs"

[dependencies]
rand = "0.8.5"
